--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="LZ Psicologia">
+  <meta name="google-site-verification" content="Wm-mqFCke0hM_KW_o9dPw0QAAyDVDJTLyqptbh_hrm0" />
   <title>Clínica de Psicologia em Porto Alegre</title>
   <meta name="title" content="Psicólogo em Porto Alegre">
   <meta name="keywords" content="psicologia em porto alegre, psicólogo em Porto Alegre, clínica de psicologia em Porto Alegre"> 
